JWT auth almost done and new html pages are added

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.username=root
 spring.datasource.password=140605
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=0bc6c205bbe3dc
+spring.mail.password=11ee9eb450dc7e
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
